--- a/calculatorxd.html/calculator.html
+++ b/calculatorxd.html/calculator.html
@@ -1,17 +1,33 @@
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
 <head>
+  <script>
+  //function for displaying values
+  function dis(val)
+  {
+  document.getElementById("edu").value+=val
+   }
+  //function for evaluation
+  function solve()
+  {
+  let x = document.getElementById("edu").value
+  let y = eval(x)
+  document.getElementById("edu").value = y
+  }
+  //function for clearing the display
+  function clr()
+  {
+  document.getElementById("edu").value = ""
+  }
+  </script>
 
- <script src="java.js"></script>
 
  </head>
 
  <!-- create table -->
 <body>
-
     <link rel="stylesheet" href="style.css">
   <div class = title >Welcome to bad calculator</div>  <!-- This is legit really bad calculator -->
 <table border="1">
@@ -43,9 +59,15 @@
   <td><input type="button" value="." onclick="dis('.')"/> </td>
   <td><input type="button" value="0" onclick="dis('0')"/> </td>
   <td><input type="button" value="=" onclick="solve()"/> </td>
+  <a href="https://www.twitch.tv/yeboysky">
+<img src="https://cdn.discordapp.com/attachments/366188179126222848/973680920072708096/unknown.png"style="width:50px;height:50px;">
+<a href="https://www.twitch.tv/members4">
+<img src="https://cdn.discordapp.com/attachments/366188179126222848/973683252697112677/unknown.png"style="width:50px;height:50px;">
+<a href="https://www.facebook.com/maziu.gincul">
+<img src="https://cdn.discordapp.com/attachments/366188179126222848/973684023991861288/Snapchat-1408343676.jpg"style="width:50px;height:50px;">
+</a>
 </tr>
 </table>
-
-
+https://cdn.discordapp.com/attachments/366188179126222848/973684023991861288/Snapchat-1408343676.jpg
 </body>
 </html>
